test fix to bckgrnd overflow problem.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,10 @@
+html {
+/*    overflow: hidden;
+*/}
+body {
+	background-color: #222;
+}
+
 html, body {
 	height: 100%;
 	width: 100%;
@@ -5,7 +12,6 @@ html, body {
 	color: #eee;
 }
 #container {
-	background-color: #222;
 	min-height: 100%;
 	width: 100%;
 }
@@ -74,6 +80,7 @@ h3 {
 .gif {
 	margin: 0;
 	cursor: pointer;
+	max-width: 100%;
 }
 footer {
 	clear: both;
